# thesis

./: analytical.py  constants.py  functions.py  main_analytical.py  main_numerical.py  notebook_hysteresis.ipynb  num_methods.py  paper.ipynb  ploting.py  pyproject.toml  tempCodeRunnerFile.py  test.py  toolset.py  utility.py
