[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Oleksii <alex29.06.05@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
sympy = "^1.13.3"
ipywidgets = "^8.1.5"
pillow = "^11.0.0"
joblib = "^1.4.2"
numba = "^0.61.0"
ray = "^2.44.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
